tests/ui/timestamp-input-parameter.rs
#![no_main]
#[defmt::timestamp]
fn foo(x: u64) -> u64 { x + 1 }
